--- a/config/ppo/Sprint/Mimicker2D_Sprint.yaml
+++ b/config/ppo/Sprint/Mimicker2D_Sprint.yaml
@@ -1,18 +1,18 @@
 behaviors:
-  Walker:
+  Sprinter:
     trainer_type: ppo
     hyperparameters:
       batch_size: 1024
       buffer_size: 10240
-      learning_rate: 0.0002
+      learning_rate: 0.0003
       beta: 0.005
-      epsilon: 0.15
+      epsilon: 0.2
       lambd: 0.95
       num_epoch: 3
       learning_rate_schedule: linear
     network_settings:
       normalize: true
-      hidden_units: 128
+      hidden_units: 256
       num_layers: 3
       vis_encode_type: simple
     reward_signals:
@@ -21,6 +21,6 @@ behaviors:
         strength: 1.0
     keep_checkpoints: 30
     checkpoint_interval: 1000000
-    max_steps: 25000000
+    max_steps: 2000000
     time_horizon: 1000
     summary_freq: 20000
