--- a/config/ppo/Sprint/Mimicker2D_Sprint_2Layer_FineTuning.yaml
+++ b/config/ppo/Sprint/Mimicker2D_Sprint_2Layer_FineTuning.yaml
@@ -1,5 +1,5 @@
 behaviors:
-  Walker:
+  Sprinter:
     trainer_type: ppo
     hyperparameters:
       batch_size: 1024
@@ -12,8 +12,8 @@ behaviors:
       learning_rate_schedule: linear
     network_settings:
       normalize: true
-      hidden_units: 128
-      num_layers: 3
+      hidden_units: 256
+      num_layers: 2
       vis_encode_type: simple
     reward_signals:
       extrinsic:
@@ -21,6 +21,6 @@ behaviors:
         strength: 1.0
     keep_checkpoints: 30
     checkpoint_interval: 1000000
-    max_steps: 25000000
+    max_steps: 20000000
     time_horizon: 1000
     summary_freq: 20000
