--- a/config/ppo/Sprint/Mimicker2D_Sprint_Small.yaml
+++ b/config/ppo/Sprint/Mimicker2D_Sprint_Small.yaml
@@ -1,5 +1,5 @@
 behaviors:
-  Runner:
+  Sprinter:
     trainer_type: ppo
     hyperparameters:
       batch_size: 1024
@@ -19,7 +19,8 @@ behaviors:
       extrinsic:
         gamma: 0.995
         strength: 1.0
-    keep_checkpoints: 5
-    max_steps: 20000000
+    keep_checkpoints: 30
+    checkpoint_interval: 1000000
+    max_steps: 1000000
     time_horizon: 1000
     summary_freq: 20000
